# KLab-22-23-ConfIdent

./: .gitignore  README.md  main.py  openDBinBrowser.py  pyproject.toml  requirements.txt  seriesAnalysis.py  test.py  utils.py  website.html
.github/workflows/: build.yml
Queries/: extractSeriesById.sql  getEventInSeriesId.sql  query01.sql  query02.sql
Scripts/: install
docs/: HowToUse.markdown  Notes.markdown
docs/workdoc/: analysis.markdown  performance.markdown  simpleCases.markdown  todo.markdown  website_analysis.markdown
docs/workdoc/diagrams/: EventEvaluator_verdict  (+1 more)
kgl_event_prediction/: SearchingEventPredictor.py  db_util.py  event.py  eventEvaluator.py  eventPredictor.py  main.py  multiGuessEventPredictor.py  openDBinBrowser.py  search_test_dummy.py  seriesAnalysis.py  seriesAnalyticsVis.py  simpleEventPredictor.py  utils.py  website.py
kgl_event_prediction/Analysis/: WebsiteAnalysisFromCSV.py  WebsiteAnalytics.py  seriesAnalysis.py  seriesAnalyticsVis.py
kgl_event_prediction/Evaluator/: eventEvaluator.py
kgl_event_prediction/Predictors/: eventPredictor.py  multiGuessEventPredictor.py  simpleEventPredictor.py
kgl_event_prediction/resources/: generator_extraction_dict.json  ordinalNumbers.py
kgl_event_prediction/website/: website.py
scripts/: get_cc_db.py  test
tests/: BaseTest.py  test.py  test_dbutil.py  test_eventEvaluator.py  test_eventPredictor.py  test_foo.py  test_multiGuessEventPredictor.py  test_searchingEventPredictor.py  test_simpleEventPredictor.py  test_util.py  test_websiteAnalytics.py  testutilsTest.py
(+16 files in other folders)
