[project]
name = "KLab-22-23-ConfIdent"

version = "0.1.0"

description = "Prediction of future Events."

authors = [
    {author = "Lars Kudlik"},
    {author = "Edwin Özdemir"},
    {author = "Tasja Arriens"},
]

dependencies = [
    # ConferenceCorpus >=0.0.38
    'ConferenceCorpus~=0.0.38',
    # tabulate
    'tabulate',
    # sqlite-web
    'sqlite-web',
    'beautifulsoup4',
    'requests',
    # is corpus included in ConferenceCorpus?
    'corpus',
]